--- a/cryptStyle.css
+++ b/cryptStyle.css
@@ -13,7 +13,7 @@ body{
     height: 100%;
     z-index: -1;
     display: block;
-    background-image: url('../../../Documents/GitHub/MartinSolheim.github.io/resources/background.JPG');
+    background-image: url('/resources/background.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
