--- a/cryptStyle.css
+++ b/cryptStyle.css
@@ -9,15 +9,14 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    background-color: #595959;
+    background-color: #1a1a1a;
     content: "";
-    position: fixed;
+    position: absolute;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
     z-index: -1;
-    display: block;
     -webkit-animation: '';
     animation: '';
 }
@@ -35,20 +34,109 @@ body{
 }
 
 .content{
-    #margin: 2% 5% 2% 5%;
-    margin: auto;
-    width: 95%;
+    background-color: #1a1a1a;
+    margin-left: 10%;
+    position: relative;
+    left: 0;
+    top: 0;
     z-index: 5;
+    padding: 1em;
+    display: block;
+}
+
+.sideMenu{
+    background-color: #0d0d0d;
+    z-index: 1;
+    position: fixed;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 10%;
+    height: 100%;
+
+}
+
+#menuList{
+    list-style: none;
+    font-size: 1em;
+    padding-left: 0;
+}
+
+#menuList li{
+    left: 0;
+    padding: 0.5em 1em 0.5em 0.5em;
+    margin-right: 0.5em;
+    margin-top: 0.5em;
+    display: block;
+    background-color: #808080;
+}
+
+#menuList li:hover{
+    background: linear-gradient(135deg, rgba(0,0,0,0.65) 100%, rgba(0,0,0,0) 0%);
+    color: lightblue;
+}
+
+#menuList a{
+    display: block;
+    color: inherit;
+    text-decoration: none;
+}
+
+div{
+    padding-top: 1em;
+}
+
+#modeDiv{
+    display: block;
+    cursor: pointer;
+}
+
+#modeDiv input[type="radio"]{
+    display: none;
+}
+
+#modeDiv input[type="radio"] + label {
+    display: inline;
+    padding: 0 0.5em 0 0.5em;
+    background-color: black;
+    border-color: #0d0d0d;
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+#modeDiv input[type="radio"]:checked + label{
+    transition: border 0.5s;
+    border: 5px solid #007399;
+    transition-timing-function: ease-in-out;
+}
+
+#menuList input[type="radio"]{
+    display: none;
+}
+
+#menuList input[type="radio"] + label{
+    display: block;
+    background-color: black;
+    border-color: #0d0d0d;
+    margin-bottom: 1em;
+    text-align: center;
+}
+
+
+#menuList input[type="radio"]:checked + label{
+    transition: border 0.5s;
+    border: 5px solid #007399;
+    transition-timing-function: ease-in-out;
 }
 
 .content:after{
-    background-color: white;
+    background-color: #595959;
     opacity: 0.6;
 }
 
 #inputBox, #output{
-    width: 45%;
-    height: 40%;
+    margin: auto;
+    width: 49%;
     text-align: left;
     font-size: 2em;
 }
