--- a/cryptStyle.css
+++ b/cryptStyle.css
@@ -5,7 +5,7 @@ body{
 }
 
 .contentBefore{
-    background-image: url('/resources/background.JPG');
+    background-image: url('./resources/background.JPG');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
